--- a/views/about.ejs
+++ b/views/about.ejs
@@ -103,7 +103,7 @@ Even if you - the probable outcome is failure." - Elon Musk</blockquote>
                         <div class="member-inner">
                             <figure class="profile" style="margin:0px">
                                 <img style="height:230px;" class="img-responsive" src="/images/people/ramakanth.jpg" alt="Ramakanth"/>
-                                <figcaption class="info"><span class="name">Ramakanth Reddy</span><br /><span class="job-title">Hacker</span></figcaption>
+                                <figcaption class="info"><span class="name">Ramakanth Reddy</span><br /><span class="job-title">Certified Ethical Hacker</span></figcaption>
                             </figure><!--//profile-->
                             <div class="social">
                                 <ul class="social-list list-inline">
